<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 
    android:orientation="vertical" >
    
    <Button 
        android:id="@+id/cmdLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list"
        android:onClick="cmdButtonClick" />
    
    <Button 
        android:id="@+id/cmdListaMod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modlist"
        android:onClick="cmdButtonClick" />

    <Button 
        android:id="@+id/cmdSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spin"
        android:onClick="cmdButtonClick" />
    
    <Button 
        android:id="@+id/cmdGaleria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gal"
        android:onClick="cmdButtonClick" />
    
    <Button 
        android:id="@+id/cmdListaExpansible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explist"
        android:onClick="cmdButtonClick" />
    
</LinearLayout>
